Fixing out of memory errors when running tests
- Increased memory size for maven surefire
- Limiting in memory elastic search for tests to only have 1 shard and 0 replicas
- Marked the SearchServiceIntegrationsTests as @DirtiesContext
- Removed unnecessary ApplicationConfigurationsTests (this is covered by BasicAcceptanceTests)